# llm-chat

./: CMakeLists.txt  README.md
build_audit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_chat.vcxproj  basic_chat.vcxproj.filters  llm-chat.sln  persistent_chat.vcxproj  persistent_chat.vcxproj.filters  token_budget.vcxproj  token_budget.vcxproj.filters
build_audit/basic_chat.dir/Debug/: basic_chat.exe.recipe
build_audit/basic_chat.dir/Debug/basic_chat.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/persistent_chat.dir/Debug/: persistent_chat.exe.recipe
build_audit/persistent_chat.dir/Debug/persistent_chat.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/token_budget.dir/Debug/: token_budget.exe.recipe
build_audit/token_budget.dir/Debug/token_budget.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_audit/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_audit/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+3 more)
examples/: basic_chat.cpp  persistent_chat.cpp  token_budget.cpp
include/: llm_chat.hpp
